--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "node --openssl-legacy-provider ./node_modules/karma/bin/karma start",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
