--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -3,10 +3,10 @@ kind: ConfigMap
 metadata:
   name: env-config
 data:
-  AWS_BUCKET: arn:aws:s3:::monolithudacityprokect3
+  AWS_BUCKET: arn:aws:s3:::monolith-project-3
   AWS_PROFILE: default
   AWS_REGION: us-east-1
   JWT_SECRET: testing
   POSTGRES_DB: cdr
-  POSTGRES_HOST: cdr.cpfarcgdj2ls.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: cdr.cger0lfcbst5.us-east-1.rds.amazonaws.com
   URL: http://localhost:8100
