--- a/udagram-api-user/package.json
+++ b/udagram-api-user/package.json
@@ -35,6 +35,7 @@
     "@types/express": "4.16.1",
     "@types/jsonwebtoken": "9.0.7",
     "@types/node": "11.11.6",
+    "@types/lodash": "4.14.74",
     "@types/sequelize": "4.27.44",
     "@types/validator": "10.9.0",
     "@typescript-eslint/eslint-plugin": "2.19.2",
