--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,24 +17,28 @@ jobs:
             sudo apt-get install -y nodejs
             node -v
             npm -v
+
+            TIMESTAMP=$(date +%s)
+            DOCKER_TAG="v1_${TIMESTAMP}"
+
             docker build -t udagram-api-feed ./udagram-api-feed
-            docker tag udagram-api-feed $DOCKER_REPO/udagram-api-feed:v1
+            docker tag udagram-api-feed $DOCKER_REPO/udagram-api-feed:$DOCKER_TAG
 
             docker build -t udagram-api-user ./udagram-api-user
-            docker tag udagram-api-user $DOCKER_REPO/udagram-api-user:v1
+            docker tag udagram-api-user $DOCKER_REPO/udagram-api-user:$DOCKER_TAG
 
             docker build -t udagram-frontend ./udagram-frontend
-            docker tag udagram-frontend $DOCKER_REPO/udagram-frontend:v1
+            docker tag udagram-frontend $DOCKER_REPO/udagram-frontend:$DOCKER_TAG
 
             docker build -t udagram-reverseproxy ./udagram-reverseproxy
-            docker tag udagram-reverseproxy $DOCKER_REPO/udagram-reverseproxy:v1
+            docker tag udagram-reverseproxy $DOCKER_REPO/udagram-reverseproxy:$DOCKER_TAG
 
             docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-            docker push $DOCKER_REPO/udagram-api-feed:v1
-            docker push $DOCKER_REPO/udagram-api-user:v1
-            docker push $DOCKER_REPO/udagram-frontend:v1
-            docker push $DOCKER_REPO/udagram-reverseproxy:v1
+            docker push $DOCKER_REPO/udagram-api-feed:$DOCKER_TAG
+            docker push $DOCKER_REPO/udagram-api-user:$DOCKER_TAG
+            docker push $DOCKER_REPO/udagram-frontend:$DOCKER_TAG
+            docker push $DOCKER_REPO/udagram-reverseproxy:$DOCKER_TAG
 
 workflows:
   default:
