--- a/udagram-api-user/package.json
+++ b/udagram-api-user/package.json
@@ -31,9 +31,10 @@
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
     "@types/bluebird": "3.5.26",
+    "@types/chai": "4.1.7",
     "@types/cors": "2.8.6",
-    "@types/express": "4.16.1",
-    "@types/jsonwebtoken": "9.0.7",
+    "@types/express": "4.16.7",
+    "@types/jsonwebtoken": "8.3.8",
     "@types/node": "11.11.6",
     "@types/lodash": "4.14.74",
     "@types/sequelize": "4.27.44",
