--- a/deployment/backend-user-deployment.yaml
+++ b/deployment/backend-user-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: backend-user
     spec:
       containers:
-        - image: thanhlong6720/udagram-api-user:v1
+        - image: thanhlong6720/udagram-api-user:v1_1730186166
           name: backend-user
           imagePullPolicy: Always
           resources:
