--- a/udagram-api-feed/package.json
+++ b/udagram-api-feed/package.json
@@ -36,6 +36,7 @@
     "@types/express": "4.16.1",
     "@types/jsonwebtoken": "8.3.8",
     "@types/express-serve-static-core": "4.16.7",
+    "@types/cookiejar": "2.1.1",
     "@types/lodash": "4.14.74",
     "@types/node": "11.11.6",
     "@types/sequelize": "4.27.44",
