--- a/udagram-api-user/package.json
+++ b/udagram-api-user/package.json
@@ -35,6 +35,7 @@
     "@types/cors": "2.8.6",
     "@types/express": "4.16.1",
     "@types/express-serve-static-core": "4.16.7",
+    "@types/cookiejar": "2.1.1",
     "@types/jsonwebtoken": "8.3.8",
     "@types/node": "11.11.6",
     "@types/lodash": "4.14.74",
