--- a/deployment/backend-feed-deployment.yaml
+++ b/deployment/backend-feed-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: backend-feed
     spec:
       containers:
-        - image: thanhlong6720/udagram-api-feed:v1
+        - image: thanhlong6720/udagram-api-feed:v1_1730193779
           name: backend-feed
           imagePullPolicy: Always
           resources:
