--- a/udagram-api-feed/package.json
+++ b/udagram-api-feed/package.json
@@ -31,11 +31,13 @@
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
     "@types/bluebird": "3.5.26",
-    "@types/chai": "^4.1.7",
+    "@types/chai": "4.1.7",
     "@types/cors": "2.8.6",
     "@types/express": "4.16.1",
-    "@types/jsonwebtoken": "9.0.7",
-    "@types/lodash": "^4.14.149",
+    "@types/jsonwebtoken": "8.3.8",
+    "@types/express-serve-static-core": "4.16.7",
+    "@types/cookiejar": "2.1.1",
+    "@types/lodash": "4.14.74",
     "@types/node": "11.11.6",
     "@types/sequelize": "4.27.44",
     "@types/validator": "10.9.0",
